--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="info">
                     <h3>Linkedin</h3>
-                    <a href="https://www.linkedin.com/in/raed-tubileh-60ba84114/"><p>www.linkedin.com</p></a>
+                    <a href="www.linkedin.com/in/raed-tebeleh-60ba84114"><p>www.linkedin.com</p></a>
                 </div>
             </div>
             <div class="card">
