--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="text-center">
-            <img src="image\RaedImage.jpg" class="rounded float-end" alt="...">
+            <img src="image\raed.jpg" class="rounded float-end" alt="...">
         </div>
         <div class="dark-mod-icon">
             <button id="darkModeToggle" class="dark-mode-toggle">
